--- a/configs/train_configs.yaml
+++ b/configs/train_configs.yaml
@@ -1,5 +1,5 @@
-# model 
-model_id: MyModel
+# model [psp/e4e]
+model_id: psp
 
 # multi-GPUs
 use_mGPU: True
@@ -15,29 +15,46 @@ wandb_alert_thres: 1000
 # root
 train_dataset_root_list: [
                 '../dataset/CelebHQ',
-                '../dataset/ffhq16k'
+                '../dataset/ffhq70k'
             ]
 
 save_root: train_result
 
-# learning rate
-lr_G: 0.0001
-lr_D: 0.00001
-beta1: 0
-beta2: 0.999
+
+# optimizer 
+optimizer: Ranger # [Ranger, Adam]
+betas: [0.95, 0.999] # default: Adam (0.9, 0.999) / Ranger (0.95, 0.999)
 
 # weight of loss
-W_adv: 1
-W_id: 5
-W_recon: 10
-W_cycle: 10
-W_lpips: 10
-W_attr: 20
-W_feat: 10
+# for psp
+# learning rate
+lr_G: 0.0001
+W_adv: 0
+W_id: 0.1
+W_recon: 1
+W_cycle: 0
+W_lpips: 0.8
+W_attr: 0
+W_feat: 0
+
+# for e4e
+# use_progressive_steps: True
+# progressive_start: 20000
+# progressive_step_cycle: 2000
+
+# lr_G: 0.0001
+# lr_D: 0.00002
+# W_adv: 0.1
+# W_id: 0.1
+# W_recon: 1
+# W_cycle: 0
+# W_lpips: 0.8
+# W_attr: 0
+# W_feat: 0
+# W_reg: 0.0002
 
 # hyperparameters
-same_prob: 0.2
-batch_per_gpu: 2
+batch_per_gpu: 8
 max_step: 400000
 
 # log cycle
